Comments about PDF bug | tabula import adjusted

--- a/BrazilAnalysis/datacleasing.ipynb
+++ b/BrazilAnalysis/datacleasing.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd"
    ]
@@ -30,13 +18,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[        Maio 1974     Decreto no 73995, de 1974      Cr$ 376,80\n",
+       " 0   Dezembro 1974          Lei no 6147, de 1974      Cr$ 415,20\n",
+       " 1       Maio 1975     Decreto no 75679, de 1975      Cr$ 532,80\n",
+       " 2       Maio 1976     Decreto no 77510, de 1976      Cr$ 768,00\n",
+       " 3       Maio 1977     Decreto no 79610, de 1977    Cr$ 1.106,40\n",
+       " 4       Maio 1978     Decreto no 81615, de 1978    Cr$ 1.560,00\n",
+       " 5       Maio 1979     Decreto no 84135, de 1979    Cr$ 2.268,00\n",
+       " 6   Novembro 1979     Decreto no 84135, de 1979    Cr$ 2.932,80\n",
+       " 7       Maio 1980     Decreto no 84674, de 1980    Cr$ 4.149,60\n",
+       " 8   Novembro 1980     Decreto no 85310, de 1980    Cr$ 5.788,80\n",
+       " 9       Maio 1981     Decreto no 85950, de 1981    Cr$ 8.464,80\n",
+       " 10  Novembro 1981     Decreto no 86514, de 1981   Cr$ 11.928,00\n",
+       " 11      Maio 1982     Decreto no 87139, de 1982   Cr$ 16.608,00\n",
+       " 12  Novembro 1982     Decreto no 87743, de 1982   Cr$ 23.568,00\n",
+       " 13      Maio 1983     Decreto no 88267, de 1983   Cr$ 34.776,00\n",
+       " 14  Novembro 1983     Decreto no 88930, de 1983   Cr$ 57.120,00\n",
+       " 15      Maio 1984     Decreto no 89589, de 1984   Cr$ 97.176,00\n",
+       " 16  Novembro 1984     Decreto no 90301, de 1984  Cr$ 166.560,00\n",
+       " 17      Maio 1985     Decreto no 91213, de 1985  Cr$ 333.120,00\n",
+       " 18  Novembro 1985     Decreto no 91861, de 1985  Cr$ 600.000,00\n",
+       " 19     Março 1986  Decreto-Lei no 2284, de 1986      Cz$ 804,00\n",
+       " 20   Janeiro 1987    Portaria  no 3019, de 1987      Cz$ 964,80\n",
+       " 21     Março 1987     Decreto no 94062, de 1987    Cz$ 1.368,00\n",
+       " 22      Maio 1987    Portaria  no 3149, de 1987    Cz$ 1.641,60\n",
+       " 23     Junho 1987    Portaria  no 3175, de 1987    Cz$ 1.969,92\n",
+       " 24    Agosto 1987  Decreto-Lei no 2351, de 1987    Cz$ 1.970,00\n",
+       " 25  Setembro 1987     Decreto no 94815, de 1987    Cz$ 2.400,00\n",
+       " 26   Outubro 1987     Decreto no 94989, de 1987    Cz$ 2.640,00\n",
+       " 27  Novembro 1987     Decreto no 95092, de 1987    Cz$ 3.000,00\n",
+       " 28  Dezembro 1987     Decreto no 95307, de 1987    Cz$ 3.600,00\n",
+       " 29   Janeiro 1988     Decreto no 95479, de 1987    Cz$ 4.500,00]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from tabula import read_pdf\n",
+    "from tabula.io import read_pdf\n",
     "# I tried to load directly from the PDF I have found, but I got some bugs, so I made a CSV by my own based on the PDF\n",
-    "df = read_pdf(\"data/Min_Sal/Tabela-Valores-SalarioMinimo-1940a2022_orig.pdf\")\n",
+    "# I can't read the pages after the second one\n",
+    "# If i use pages=3 or more, it gives me an empy list\n",
+    "df = read_pdf(\"data/Min_Sal/Tabela-Valores-SalarioMinimo-1940a2022_orig.pdf\", pages=2)\n",
     "df"
    ]
   },
